--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -41,16 +41,16 @@ body,
   background-color: white;
   margin-bottom: 70px;
   display: flex;
-  flex-direction: column;
-
   align-items: flex-start;
   justify-content: space-between;
+  flex-direction: column;
   font-weight: 300;
   padding: 20px;
   border-radius: 5px;
   color: #adaeb9;
   box-shadow: 0 13px 27px -5px rgba(50, 50, 93, 0.25),
     0 8px 16px -8px rgba(0, 0, 0, 0.3), 0 -6px 16px -6px rgba(0, 0, 0, 0.025);
+  word-break: break-all;
 }
 
 .movie img {
@@ -91,4 +91,12 @@ body,
 .movie .movie__year {
   margin-right: 10px;
   font-size: 14px;
+}
+
+.movie ul {
+  display: flex;
+  align-content: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
+  overflow: auto;
 }
